--- a/casestudies/51/casestudy/www/layout/case_id_51_id_144_c_bio.html
+++ b/casestudies/51/casestudy/www/layout/case_id_51_id_144_c_bio.html
@@ -1,46 +1,59 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Scott Lewis | Not for Profit? The Voice of San Diego Experiment
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Scott Lewis | Not for Profit? The Voice of San Diego Experiment
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -48,17 +61,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: #c21818;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -74,258 +84,235 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/51/knightcase_banner_voiceofsandiego.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_51.html" title="Home"><span>Biography: Scott Lewis</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_51_id_541.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_523.html">Neil Morgan and Buzz Woolley</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_524.html">Nonprofit or for-profit?</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_525.html">Nonprofits and news</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_526.html">Assembling a staff</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_527.html">Early days</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_528.html">New leadership</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_529.html">Starting over</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_530.html">"The money-getting operation"</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_531.html">Money sources</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_51_id_532.html">Is it sustainable?</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/51/Voice&#32;of&#32;San&#32;Diego&#32;Experiment_wm.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_51.html">Home</a></div>		
-		<h1 class="title">Biography: Scott&nbsp;Lewis</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float: right; padding: 10px;">
-	<img src="../../files/photos/415/Lewis-bio.gif" /></div>
-<p>
-	Scott Lewis was born in Greeley, Colorado, and grew up in Salt Lake City, Utah. In college at the University of Utah, he began freelancing for the alternative weekly the <em>Salt Lake City Weekly</em>, and worked there full-time after graduation. He spent a few years freelancing while moving around the country with his wife, a Navy service member, before landing at San Diego&#39;s <em>Daily Transcript</em> in 2003. He joined <em>Voice of San Diego</em> in 2005, becoming co-editor at the end of that year. He became CEO in 2008.</p>
-<div style="float: right; padding: 10px;">
-	&nbsp;</div>
-<p>
-	<i>Listen to Lewis describe how he got involved in </i>Voice of San Diego<i>.</i><br />
-	<img alt="" border="0" class="audiofile" src="../../files/audios/115/Lewis&#32;bio.mp3" /></p>
-</div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/51/knightcase_banner_voiceofsandiego.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_51.html" title="Home">
+         <span>
+          Biography: Scott Lewis
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_51_id_541.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_523.html">
+          Neil Morgan and Buzz Woolley
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_524.html">
+          Nonprofit or for-profit?
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_525.html">
+          Nonprofits and news
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_526.html">
+          Assembling a staff
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_527.html">
+          Early days
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_528.html">
+          New leadership
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_529.html">
+          Starting over
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_530.html">
+          "The money-getting operation"
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_531.html">
+          Money sources
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_51_id_532.html">
+          Is it sustainable?
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  href="case_id_51_id_143_c_bio.html">Andrew&nbsp;Donohue</a></li>
-
-<li class="leaf"><a  class="active"  href="case_id_51_id_144_c_bio.html">Scott&nbsp;Lewis</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/51/Voice of San Diego Experiment_wm.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_51.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Scott Lewis
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float: right; padding: 10px;">
+         <img src="../../files/photos/415/Lewis-bio.gif"/>
+        </div>
+        <p>
+         Scott Lewis was born in Greeley, Colorado, and grew up in Salt Lake City, Utah. In college at the University of Utah, he began freelancing for the alternative weekly the
+         <em>
+          Salt Lake City Weekly
+         </em>
+         , and worked there full-time after graduation. He spent a few years freelancing while moving around the country with his wife, a Navy service member, before landing at San Diego's
+         <em>
+          Daily Transcript
+         </em>
+         in 2003. He joined
+         <em>
+          Voice of San Diego
+         </em>
+         in 2005, becoming co-editor at the end of that year. He became CEO in 2008.
+        </p>
+        <div style="float: right; padding: 10px;">
+        </div>
+        <p>
+         <i>
+          Listen to Lewis describe how he got involved in
+         </i>
+         Voice of San Diego
+         <i>
+          .
+         </i>
+         <br/>
+         <!--<img alt="" border="0" class="audiofile" src="../../files/audios/115/Lewis bio.mp3"/>-->
+         <audio controls><source src="../../files/audios/115/Lewis&#32;bio.mp3" type="audio/mpeg"></audio>
+        </p>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_51_id_143_c_bio.html">
+          Andrew Donohue
+         </a>
+        </li>
+        <li class="leaf">
+         <a class="active" href="case_id_51_id_144_c_bio.html">
+          Scott Lewis
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
