--- a/casestudies/124/casestudy/www/layout/case_id_124_id_241_c_bio.html
+++ b/casestudies/124/casestudy/www/layout/case_id_124_id_241_c_bio.html
@@ -1,48 +1,60 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
-
-
-<head>
-  <title>Biography: Tatiana Wah | Côte Sud Initiative: Integrated Development in Haiti
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+ <head>
+  <title>
+   Biography: Tatiana Wah | Côte Sud Initiative: Integrated Development in Haiti
 	- A Journalism Case Study
-
   </title>
- 
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-
-  <style type="text/css" media="all">@import "css_global/book/book.css";</style>
-<style type="text/css" media="all">@import "css_global/node/node.css";</style>
-<style type="text/css" media="all">@import "css_global/system/defaults.css";</style>
-<style type="text/css" media="all">@import "css_global/system/system.css";</style>
-<style type="text/css" media="all">@import "css_global/user/user.css";</style>
-<style type="text/css" media="all">@import "css_global/img_assist/img_assist.css";</style>
-<style type="text/css" media="all">@import "css_global/knightcase/style.css";</style>
-<style type="text/css" media="print">@import "css_global/knightcase/print.css";</style>
-<script type="text/javascript" src="com/jquery/jquery-1.2.6.js"></script>
-<script type="text/javascript" src="js/img_assist.js"></script>
-<script type="text/javascript" src="js/audioimage.js"></script>
-<script type="text/javascript" src="com/jquery/jquery.metadata.js"></script> 
-<script type="text/javascript" src="com/jquery/jquery.media.js"></script> 
-<script type="text/javascript" src="swfobject.js"></script> 
-
- <script type="text/javascript">
-        var GB_ROOT_DIR = "com/greybox/";
-    </script>
-
-    <script type="text/javascript" src="com/greybox/AJS.js"></script>
-    <script type="text/javascript" src="com/greybox/AJS_fx.js"></script>
-
-    <script type="text/javascript" src="com/greybox/gb_scripts.js"></script>
-    <link href="com/greybox/gb_styles.css" rel="stylesheet" type="text/css" media="all" />
-	
-
-
-    <script type="text/javascript">
-      var GB_ANIMATION = true;
+  <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
+   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+   <style media="all" type="text/css">
+    @import "css_global/book/book.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/node/node.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/defaults.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/system/system.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/user/user.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/img_assist/img_assist.css";
+   </style>
+   <style media="all" type="text/css">
+    @import "css_global/knightcase/style.css";
+   </style>
+   <style media="print" type="text/css">
+    @import "css_global/knightcase/print.css";
+   </style>
+   <script src="com/jquery/jquery-1.2.6.js" type="text/javascript">
+   </script>
+   <script src="js/img_assist.js" type="text/javascript">
+   </script>
+   <script src="js/audioimage.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.metadata.js" type="text/javascript">
+   </script>
+   <script src="com/jquery/jquery.media.js" type="text/javascript">
+   </script>
+   <script src="swfobject.js" type="text/javascript">
+   </script>
+   <script type="text/javascript">
+    var GB_ROOT_DIR = "com/greybox/";
+   </script>
+   <script src="com/greybox/AJS.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/AJS_fx.js" type="text/javascript">
+   </script>
+   <script src="com/greybox/gb_scripts.js" type="text/javascript">
+   </script>
+   <link href="com/greybox/gb_styles.css" media="all" rel="stylesheet" type="text/css"/>
+   <script type="text/javascript">
+    var GB_ANIMATION = true;
       $(document).ready(function(){
         $("a.greybox").click(function(){
           var t = this.title || this.innerHTML || this.href;
@@ -50,17 +62,14 @@
           return false;
         });
       });
-    </script>
-
-
-<script type="text/javascript">
+   </script>
+   <script type="text/javascript">
     $(function() {
         $('a.media').media();
     });
-</script>
-
-<style>
-#main .title
+   </script>
+   <style>
+    #main .title
 {
 	color: ;
 	font: normal 1.8em "trebuchet ms", verdana, helvetica, arial, sans-serif;
@@ -76,244 +85,217 @@
 #media {
 font-style:italic;
 }
-
-
-
-</style>
-</head>
-
-<body>
-
-<div id="container">
-
-<!-- Banner header -->
-
-<div id="header" style="background: url('../../files/global/124/haitibanner.jpg') top left no-repeat;">
-<table border="0" cellspacing="0" cellpadding="0">
-	<tr>
-		<td style="width: 100%;">
-		<h1 class='site-name'><a href="case_id_124.html" title="Home"><span>Biography: Tatiana Wah</span></a></h1>						</td>
-		<td class="kcsi_logo"><a href="https://casestudies.jrn.columbia.edu/" target="_blank" class="knightlogo"></a></td>
-	</tr>
-
-</table>
-      
-      
-</div><!-- id="header" -->
-
-
-<!-- Primary links, if enabled -->
-
-
-<!-- Secondary links, if enabled -->
-
-     <!-- <div></div> -->
-
-
-<div id="pagebody">
-
-	
-	<!-- Left sidebar --><div id="sidebar-left">
-
-		  <div class="block block-menu" id="block-menu-63">
-    <h2 class="title">Sections</h2>
-    <div class="content">
-<ul class="menu">
-
-
-
-<li class="leaf"><a  href="case_id_124.html">Title Page</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_850.html">Introduction</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_851.html">International development comes to Haiti </a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_852.html">Earthquake and a strategy rethink</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_853.html">Dollars and data</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_854.html">Bureaucracy and capacity</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_855.html">Shifting politics and realities</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_856.html">Fragile state factor</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_857.html">Appendix 1</a>
-
-
-
-
-
-</li>
-
-
-<li class="leaf"><a  href="case_id_124_id_858.html">Appendix 2</a>
-
-
-
-
-
-</li>
-
-
-</ul>
-</div>
- </div>
-
-  <div class="block block-block" id="block-block-1">
-    <h2 class="title"></h2>
-
-	
-    <div class="content"><div class="content">
-<ul class="menu">
-<li class="printpdf">
-<a href="../../files/global/124/Haiti&#32;final&#32;031114.pdf" target="_blank">Download this case as a PDF</a></li>
-</ul>
-</div>
-</div>
-
-
- </div>
-	</div><!-- id="sidebar-left" -->
-	
-	<!-- Main content of page -->
-	
-	<div id="contentbody" class="three-column" >
-				
-		<div id="main">
-		<div class="breadcrumb"><a href="case_id_124.html">Home</a></div>		
-		<h1 class="title">Biography: Tatiana&nbsp;Wah</h1>		
-		
-		  <div class="node">        
-    <span class="taxonomy"></span>
-    <div class="content"><div style="float:right;padding:10px">
-	<img src="../../files/photos/822/Tatiana.jpg" style="height: 272px; width: 250px;" /></div>
-<p>
-	Tatiana Wah was director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia University&rsquo;s Earth Institute. She advised the Haitian government on policy aimed at achieving the United Nations&rsquo; Millennium Development Goals.</p>
-<p>
-	In 2010, Wah was named Director of Strategy and Planning for the Interim Haiti Recovery Commission (IHRC), which organized the country&#39;s recovery from the 7.0 magnitude earthquake that devastated Port-au-Prince in January that year.</p>
-<blockquote>
-	<p>
-		<i>Wah on Haiti&#39;s difficult future.</i><br />
-		<img alt="" border="0" class="audiofile" src="../../files/audios/354/Wah2.mp3" /></p>
-</blockquote>
-</div>
+   </style>
+  </meta>
+ </head>
+ <body>
+  <div id="container">
+   <!-- Banner header -->
+   <div id="header" style="background: url('../../files/global/124/haitibanner.jpg') top left no-repeat;">
+    <table border="0" cellpadding="0" cellspacing="0">
+     <tr>
+      <td style="width: 100%;">
+       <h1 class="site-name">
+        <a href="case_id_124.html" title="Home">
+         <span>
+          Biography: Tatiana Wah
+         </span>
+        </a>
+       </h1>
+      </td>
+      <td class="kcsi_logo">
+       <a class="knightlogo" href="https://casestudies.jrn.columbia.edu/" target="_blank">
+       </a>
+      </td>
+     </tr>
+    </table>
+   </div>
+   <!-- id="header" -->
+   <!-- Primary links, if enabled -->
+   <!-- Secondary links, if enabled -->
+   <!-- <div></div> -->
+   <div id="pagebody">
+    <!-- Left sidebar -->
+    <div id="sidebar-left">
+     <div class="block block-menu" id="block-menu-63">
+      <h2 class="title">
+       Sections
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="case_id_124.html">
+          Title Page
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_850.html">
+          Introduction
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_851.html">
+          International development comes to Haiti
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_852.html">
+          Earthquake and a strategy rethink
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_853.html">
+          Dollars and data
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_854.html">
+          Bureaucracy and capacity
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_855.html">
+          Shifting politics and realities
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_856.html">
+          Fragile state factor
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_857.html">
+          Appendix 1
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_858.html">
+          Appendix 2
+         </a>
+        </li>
+       </ul>
       </div>
-				</div><!-- id="main" -->
-	</div><!-- id="contentbody" -->
-
-		<!-- Right sidebar for Bios -->
-	<div id="sidebar-right">
-		  <div class="block block-menu" id="block-menu-65">
-    <h2 class="title">Biographies</h2>
-    <div class="content">
-<ul class="menu">
-
-<li class="leaf"><a  class="active"  href="case_id_124_id_241_c_bio.html">Tatiana&nbsp;Wah</a></li>
-
-<li class="leaf"><a  href="case_id_124_id_242_c_bio.html">Marc&nbsp;Levy</a></li>
-
-<li class="leaf"><a  href="case_id_124_id_243_c_bio.html">Alex&nbsp;Fischer</a></li>
-
-
-</ul>
-</div>
- </div>
-	</div><!-- id="sidebar-right" -->
-	
-
-	
-	<div class="visualclear"></div>
-
-
-</div><!-- id="pagebody" -->
-
-
-
-<div id="footer">
-	<div id="footer-inner">
-	  <div class="block block-menu" id="block-menu-66">
-    <h2 class="title">System menu</h2>
-    <div class="content">
-<ul class="menu">
-<li class="leaf"><a href="http://www.journalism.columbia.edu">© 2012 Columbia University Graduate School of Journalism</a></li>
-
-</ul>
-</div>
- </div>
-			</div><!-- id="footer-inner" -->
-
-</div><!-- id="footer" -->
-
-
-
-</div><!-- id="container" -->
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+     </div>
+     <div class="block block-block" id="block-block-1">
+      <h2 class="title">
+      </h2>
+      <div class="content">
+       <div class="content">
+        <ul class="menu">
+         <li class="printpdf">
+          <a href="../../files/global/124/Haiti final 031114.pdf" target="_blank">
+           Download this case as a PDF
+          </a>
+         </li>
+        </ul>
+       </div>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-left" -->
+    <!-- Main content of page -->
+    <div class="three-column" id="contentbody">
+     <div id="main">
+      <div class="breadcrumb">
+       <a href="case_id_124.html">
+        Home
+       </a>
+      </div>
+      <h1 class="title">
+       Biography: Tatiana Wah
+      </h1>
+      <div class="node">
+       <span class="taxonomy">
+       </span>
+       <div class="content">
+        <div style="float:right;padding:10px">
+         <img src="../../files/photos/822/Tatiana.jpg" style="height: 272px; width: 250px;"/>
+        </div>
+        <p>
+         Tatiana Wah was director of the Haiti Research and Policy Program in the Center on Globalization and Sustainable Development at Columbia University’s Earth Institute. She advised the Haitian government on policy aimed at achieving the United Nations’ Millennium Development Goals.
+        </p>
+        <p>
+         In 2010, Wah was named Director of Strategy and Planning for the Interim Haiti Recovery Commission (IHRC), which organized the country's recovery from the 7.0 magnitude earthquake that devastated Port-au-Prince in January that year.
+        </p>
+        <blockquote>
+         <p>
+          <i>
+           Wah on Haiti's difficult future.
+          </i>
+          <br/>
+          <!--<img alt="" border="0" class="audiofile" src="../../files/audios/354/Wah2.mp3"/>-->
+          <audio controls><source src="../../files/audios/354/Wah2.mp3" type="audio/mpeg"></audio>
+         </p>
+        </blockquote>
+       </div>
+      </div>
+     </div>
+     <!-- id="main" -->
+    </div>
+    <!-- id="contentbody" -->
+    <!-- Right sidebar for Bios -->
+    <div id="sidebar-right">
+     <div class="block block-menu" id="block-menu-65">
+      <h2 class="title">
+       Biographies
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a class="active" href="case_id_124_id_241_c_bio.html">
+          Tatiana Wah
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_242_c_bio.html">
+          Marc Levy
+         </a>
+        </li>
+        <li class="leaf">
+         <a href="case_id_124_id_243_c_bio.html">
+          Alex Fischer
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="sidebar-right" -->
+    <div class="visualclear">
+    </div>
+   </div>
+   <!-- id="pagebody" -->
+   <div id="footer">
+    <div id="footer-inner">
+     <div class="block block-menu" id="block-menu-66">
+      <h2 class="title">
+       System menu
+      </h2>
+      <div class="content">
+       <ul class="menu">
+        <li class="leaf">
+         <a href="http://www.journalism.columbia.edu">
+          © 2012 Columbia University Graduate School of Journalism
+         </a>
+        </li>
+       </ul>
+      </div>
+     </div>
+    </div>
+    <!-- id="footer-inner" -->
+   </div>
+   <!-- id="footer" -->
+  </div>
+  <!-- id="container" -->
+  <script type="text/javascript">
+   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try {
+  </script>
+  <script type="text/javascript">
+   try {
 var pageTracker = _gat._getTracker("UA-51144540-10");
 pageTracker._trackPageview();
-} catch(err) {}</script>
-
-</body>
+} catch(err) {}
+  </script>
+ </body>
 </html>
